Use composite action to install Gammu
That way the logic is reused.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,6 @@ jobs:
           - "3.12"
           - "3.13"
           - "3.14"
-    env:
-      # renovate: datasource=github-releases depName=gammu/gammu versioning=loose
-      GAMMU_VERSION: 1.43.2
     name: ${{ matrix.os }}, Python ${{ matrix.python-version }}
 
     steps:
@@ -31,27 +28,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
-      - name: apt
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libbluetooth-dev libusb-1.0-0-dev libgudev-1.0-dev unixodbc-dev libdbi-dev libdbd-sqlite3 libdbd-mysql libdbd-pgsql cmake cmake-data
-      - name: Install gammu
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: |
-          mkdir _gammu
-          cd _gammu
-          curl -LsSf -o gammu.tar.zst "https://github.com/gammu/gammu/releases/download/$GAMMU_VERSION/Gammu-$GAMMU_VERSION.tar.zst"
-          tar xf gammu.tar.zst
-          cd Gammu-*
-          ./configure --prefix=/usr
-          make
-          sudo make install
-      - name: Install Gammu
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: |
-          C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://github.com/gammu/gammu/releases/download/$Env:GAMMU_VERSION/Gammu-$Env:GAMMU_VERSION-Windows-Minimal.exe
-          ./gammu-setup.exe /S /D=C:/Gammu
+      - uses: ./.github/actions/install-gammu
       - name: Install
         run: uv sync --all-extras --dev
       - name: Test
