--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -16,10 +16,7 @@ jobs:
         with:
           python-version: 3.14
       - uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
-      - name: Install Gammu
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgammu-dev libdbd-sqlite3
+      - uses: ./.github/actions/install-gammu
       - name: build
         run: uv build --sdist
       - name: Store the binary wheel
@@ -38,9 +35,6 @@ jobs:
           - "3.12"
           - "3.13"
           - "3.14"
-    env:
-      # renovate: datasource=github-releases depName=gammu/gammu versioning=loose
-      GAMMU_VERSION: 1.43.2
 
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -48,10 +42,7 @@ jobs:
         uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Gammu x64
-        run: |
-          C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://github.com/gammu/gammu/releases/download/$Env:GAMMU_VERSION/Gammu-$Env:GAMMU_VERSION-Windows-Minimal.exe
-          ./gammu-setup.exe /S /D=C:/Gammu
+      - uses: ./.github/actions/install-gammu
       - uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
       - name: build
         run: uv build --wheel
@@ -77,10 +68,7 @@ jobs:
     - uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
       with:
         version: 0.10.0
-    - name: Install gammu
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgammu-dev libdbd-sqlite3
+    - uses: ./.github/actions/install-gammu
     - uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
       with:
         path: dist
